--- a/website/school/drawingRobotVWO6/drawingRobotLego.html
+++ b/website/school/drawingRobotVWO6/drawingRobotLego.html
@@ -47,11 +47,11 @@ body {
                         </a>
                         
                         <div class="backNextBox">
-                            <a href="drawingRobotIntro.html">
+                            <a href="drawingRobotIntro.html" aria-label="back. Goes a page back.">
                             <div class="backButton">
                             </div>
                             </a>
-                            <a href="drawingRobotWiring.html">
+                            <a href="drawingRobotWiring.html" aria-label="next. Goes to the next page.">
                             <div class="nextButton">
                             </div>
                             </a>
