--- a/website/school/soulbreakerVWO5/soulbreakerLevelGeneration.html
+++ b/website/school/soulbreakerVWO5/soulbreakerLevelGeneration.html
@@ -48,11 +48,11 @@ body {
                         </a>
                         
                         <div class="backNextBox">
-                            <a href="soulbreakerIntro.html">
+                            <a href="soulbreakerIntro.html" aria-label="back. Goes a page back.">
                             <div class="backButton">
                             </div>
                             </a>
-                            <a href="soulbreakerEnemies.html">
+                            <a href="soulbreakerEnemies.html" aria-label="next. Goes to the next page.">
                             <div class="nextButton">
                             </div>
                             </a>
