--- a/website/school/soulbreakerVWO5/soulbreakerPlayer.html
+++ b/website/school/soulbreakerVWO5/soulbreakerPlayer.html
@@ -48,10 +48,10 @@ body {
                         
                         <div class="backNextBox">
                             <a href="soulbreakerEnemies.html">
-                            <div class="backButton">
+                            <div class="backButton" aria-label="back. Goes a page back.">
                             </div>
                             </a>
-                            <a href="soulbreakerMenu.html">
+                            <a href="soulbreakerMenu.html" aria-label="next. Goes to the next page.">
                             <div class="nextButton">
                             </div>
                             </a>
@@ -81,7 +81,7 @@ body {
                                             The player has black hair, a red shirt and brown pants. Jesper made the sprites for the player. You can see the sprites below.
                                         </p>
                                     <div class="imageBox">
-                                        <img src="images/playerExplenationImages/playerSprite.png" style="width: 100%">
+                                        <img alt="A image of the player with black hair, a red shirt and brown pants." src="images/playerExplenationImages/playerSprite.png" style="width: 100%">
                                 </div>
                                     <h1>
                                         How does the player move and how does the collision work?
@@ -90,13 +90,13 @@ body {
                                         The player uses "wasd" to move, the game is shown with an isometric view. And when you press a button the player moves in the x and z axis at the same time. Yelow is the camera, green is the player and red is the direction where the player can move to.
                                     </p>
                                     <div class="imageBox">
-                                        <img src="images/playerExplenationImages/playerMovement.png" style="width: 100%">
+                                        <img alt="2 blue lines 1 for the x axis and 1 for the z axis. There is also a green cube in the center and a yellow cirkle in the bottom left. There is a line going from the yellow cirkle to the right and a line going from the yellow cirkle to the top. There are also arrows comming from the green cube that go in 8 diferent directions and point to letters." src="images/playerExplenationImages/playerMovement.png" style="width: 100%">
                                 </div>
                                     <p>
                                         For the collision raycasts ar used. The raycast makes a line from a player in the dirrection that its moving and if theres something there than the player cant move in that dirrection.  The blue squares are the walls, the green square is the player, the yelow line is the direction the player cant move to and the red line is the direction where the player can move to.
                                     </p>
                                     <div class="imageBox">
-                                        <img src="images/playerExplenationImages/playerMovement1.png" style="width: 100%">
+                                        <img alt="There is a blue wall next to the green cube and the arrows in the wall are yellow." src="images/playerExplenationImages/playerMovement1.png" style="width: 100%">
                                 </div>
                                         <h1>
                                             Powerups and attacks.
