--- a/website/school/drawingRobotVWO6/drawingRobotWiring.html
+++ b/website/school/drawingRobotVWO6/drawingRobotWiring.html
@@ -47,11 +47,11 @@ body {
                         </a>
                         
                         <div class="backNextBox">
-                            <a href="drawingRobotLego.html">
+                            <a href="drawingRobotLego.html" aria-label="back. Goes a page back.">
                             <div class="backButton">
                             </div>
                             </a>
-                            <a href="drawingRobotCode.html">
+                            <a href="drawingRobotCode.html" aria-label="next. Goes to the next page.">
                             <div class="nextButton">
                             </div>
                             </a>
