no ipad support ):

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <a href="website/home/home.html">
 <h1>click here if you dont get redirected</h1>
 </a>
+<h1>The website doesnt work good on ipad or iphone.</h1>
+<h1>Im trying to fix it.</h1>
 </body>
 </html>
