ipad works now (:
magic

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {
 <a href="website/home/home.html">
 <h1 style="color: yellow; text-align: center">click here if you dont get redirected</h1>
 </a>
-<h1 style="color: floralwhite; text-align: center">The website doesnt work good on ipad or iphone.</h1>
+<h1 style="color: floralwhite; text-align: center">The website doesnt work good in portrait mode on ipad or iphone.</h1>
 <h1 style="color: floralwhite; text-align: center">Im trying to fix it.</h1>
 </body>
 </html>
