--- a/website/home/home.html
+++ b/website/home/home.html
@@ -108,6 +108,7 @@ body {
                                                 <br>
                                                 Education: VWO, N/T
                                             </p>
+                                            <div class="decorationFiller"></div>
                                         </div>
                                         
                                         <div class="textBoxHalf">
