--- a/website/home/home.html
+++ b/website/home/home.html
@@ -108,7 +108,7 @@ body {
                                                 <br>
                                                 Education: VWO, N/T
                                             </p>
-                                            <div class="decorationFiller"></div>
+                                            <div class="decorationFiller" id="deco1"></div>
                                         </div>
                                         
                                         <div class="textBoxHalf">
@@ -120,7 +120,6 @@ body {
                                             <p>
                                             My hobby is also to create stuff. I'm addicted to making Lego technic cars and have spend way to much money on Lego. I also like programming, pixel art and building games like Minecraft and Trailmakers.
                                             </p>
-                                            <div class="decorationFiller"></div>
                                         </div>
                                     </div>
                                     
