--- a/index.html
+++ b/index.html
@@ -21,5 +21,8 @@ body {
 </a>
 <h1 style="color: floralwhite; text-align: center">The website doesnt work good in portrait mode on ipad or iphone.</h1>
 <h1 style="color: floralwhite; text-align: center">Im trying to fix it.</h1>
+<a href="tests/test.html">
+<p style="color: cadetblue; text-align: center">click here for the test page.</p>
+</a>
 </body>
 </html>
