--- a/tests/test.html
+++ b/tests/test.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<title>test</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href ="test.css" rel="stylesheet">
@@ -8,7 +9,7 @@
     <body>
     
     </body>
-<script>
-    document.body.innerHTML = "I like cheese";
-</script>
-</html>
+    <script type="text/javascript" scr="scripts/test.js">
+        testFunction();
+    </script>
+</html> 
