--- a/tests/test.html
+++ b/tests/test.html
@@ -9,7 +9,6 @@
     <body>
     
     </body>
-    <script type="text/javascript" scr="scripts/test.js">
-        testFunction();
-    </script>
+    <script scr="scripts/test.js" type="text/javascript"></script>
+        <script>testFunction();</script>
 </html> 
