--- a/tests/test.html
+++ b/tests/test.html
@@ -9,6 +9,5 @@
     <body>
     
     </body>
-    <script scr="scripts/test.js" type="text/javascript"></script>
-        <script>testFunction();</script>
+    <script scr="scripts/test.js"></script>
 </html> 
