stupid spelling mistakes

--- a/tests/test.html
+++ b/tests/test.html
@@ -7,7 +7,6 @@
 <link href ="test.css" rel="stylesheet">
 </head>
     <body>
-    
     </body>
-    <script scr="scripts/test.js"></script>
+    <script type="text/javascript" src="scripts/test.js"></script>
 </html> 
