--- a/tests/test.html
+++ b/tests/test.html
@@ -7,6 +7,24 @@
 <link href ="test.css" rel="stylesheet">
 </head>
     <body>
+        <div class="contentRowBox">
+            <div class="textBoxHalf">
+                <h1>adasdasd</h1>
+                <div class="decorationFiller">
+            
+                </div>
+        </div>
+        <div class="textBoxHalf">
+            <h1>cheese</h1>
+        </div>
+        </div>
+        <div class="contentRowBox">
+            <div class="textBoxHalf"></div>
+            <div class="textBoxHalf">
+                <div class="decorationFiller">
+                </div>
+            </div>
+        </div>
     </body>
     <script type="text/javascript" src="scripts/test.js"></script>
-</html> 
+</html>  
