--- a/tests/test.html
+++ b/tests/test.html
@@ -16,14 +16,21 @@
         </div>
         <div class="textBoxHalf">
             <h1>cheese</h1>
+            <div class="decorationFiller"></div>
         </div>
         </div>
+
         <div class="contentRowBox">
-            <div class="textBoxHalf"></div>
             <div class="textBoxHalf">
+                <h1>adasdasd</h1>
                 <div class="decorationFiller">
+            
                 </div>
-            </div>
+        </div>
+        <div class="textBoxHalf">
+            <h1>cheedfgdfgdfgdfgdfgdfgdfgdfgdfgse</h1>
+            <div class="decorationFiller"></div>
+        </div>
         </div>
     </body>
     <script type="text/javascript" src="scripts/test.js"></script>
