decorationFiller test script

--- a/tests/test.html
+++ b/tests/test.html
@@ -22,7 +22,7 @@
 
         <div class="contentRowBox">
             <div class="textBoxHalf">
-                <h1>adasdasd</h1>
+                <h1>adasdaswwwefasfgtththtasdawsdawdawdswwwdawdsdwwwwwwwwwwwwwwwwwwwwwwsdadhasdasd</h1>
                 <div class="decorationFiller">
             
                 </div>
