--- a/tests/test.html
+++ b/tests/test.html
@@ -6,32 +6,73 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href ="test.css" rel="stylesheet">
 </head>
+<style>
+body {
+    background-size: cover;
+    background-color: black;
+}
+</style>
     <body>
+        <!-- alows you to place two half elements next to each other -->
         <div class="contentRowBox">
+
+            <!-- element 1 -->
             <div class="textBoxHalf">
-                <h1>adasdasd</h1>
-                <div class="decorationFiller">
-            
-                </div>
-        </div>
-        <div class="textBoxHalf">
-            <h1>cheese</h1>
-            <div class="decorationFiller"></div>
-        </div>
+                <h1>Addie nervously pushed the door open and found herself face-to-face with an enormous, golden dragon. She was afraid at first, but the dragon appeared to be friendly and offered her a ride on its back. </h1>
+                <!-- fills remaining space with a decorative color -->
+                <div class="decorationFiller"></div>
+            </div>
+
+            <!-- element 2 -->
+            <div class="textBoxHalf">
+                <h1>Once upon a time, there was a curious little girl named Addie who loved to explore the woods around her house. One day, while wandering deep into the forest, she stumbled upon an old abandoned cabin. As she cautiously approached the door, she noticed there was a faint light flickering inside. </h1>
+                <!-- fills remaining space with a decorative color -->
+                <div class="decorationFiller"></div>
+            </div>
         </div>
 
+
+        <!-- alows you to place two half elements next to each other -->
         <div class="contentRowBox">
+
+            <!-- element 1 -->
             <div class="textBoxHalf">
-                <h1>adasdaswwwefasfgtththtasdawsdawdawdswwwdawdsdwwwwwwwwwwwwwwwwwwwwwwsdadhasdasd</h1>
-                <div class="decorationFiller">
+                <h1>Addie was astounded and immediately jumped off the dragon's back to search for the gemstone. After minutes of searching, she finally found the stone, clutched it in her hand, closed her eyes, and made her wish. </h1>
+                <!-- fills remaining space with a decorative color -->
+                <div class="decorationFiller"></div>
+            </div>
+
+            <!-- element 2 -->
+            <div class="textBoxHalf">
+                <h1>So they flew and flew over the trees until they reached an enchanted waterfall. The dragon told Addie that there was a magical gemstone hidden behind the falls and that whoever found it could make any wish they desired. </h1>
+                <!-- fills remaining space with a decorative color -->
+                <div class="decorationFiller"></div>
+            </div>
+
             
-                </div>
         </div>
-        <div class="textBoxHalf">
-            <h1>cheedfgdfgdfgdfgdfgdfgdfgdfgdfgse</h1>
-            <div class="decorationFiller"></div>
+
+
+        <!-- alows you to place two half elements next to each other -->
+        <div class="contentRowBox">
+
+            <!-- element 1 -->
+            <div class="textBoxHalf">
+                <h1>From that day on, Addie visited the dragon and the enchanted waterfall frequently, wishing for different things every time. She never forgot how much magic exists in the world and was forever grateful for her dragon friend and the adventures they shared.</h1>
+                <!-- fills remaining space with a decorative color -->
+                <div class="decorationFiller"></div>
+            </div>
+
+            <!-- element 2 -->
+            <div class="textBoxHalf">
+                <h1>When she opened her eyes, she found herself back in her bed, a little disorientated and confused. But then she realized that her room had transformed into a beautiful castle, with all of her favorite things and toys strewn about. Her wish had come true!</h1>
+                <!-- fills remaining space with a decorative color -->
+                <div class="decorationFiller"></div>
+            </div>
+
         </div>
-        </div>
+
     </body>
-    <script type="text/javascript" src="scripts/test.js"></script>
+    <!-- loads the script for decorationFiller -->
+    <script type="text/javascript" src="scripts/decorationFiller.js"></script>
 </html>  
