changed the story

--- a/tests/test.html
+++ b/tests/test.html
@@ -18,14 +18,14 @@ body {
 
             <!-- element 1 -->
             <div class="textBoxHalf">
-                <h1>Addie nervously pushed the door open and found herself face-to-face with an enormous, golden dragon. She was afraid at first, but the dragon appeared to be friendly and offered her a ride on its back. </h1>
+                <h1>Addie nervously explored the building and she found herself face-to-face with an enormous, golden dragon. She was afraid at first, but the dragon appeared to be friendly and offered her a ride on its back. </h1>
                 <!-- fills remaining space with a decorative color -->
                 <div class="decorationFiller"></div>
             </div>
 
             <!-- element 2 -->
             <div class="textBoxHalf">
-                <h1>Once upon a time, there was a curious little girl named Addie who loved to explore the woods around her house. One day, while wandering deep into the forest, she stumbled upon an old abandoned cabin. As she cautiously approached the door, she noticed there was a faint light flickering inside. </h1>
+                <h1>Once upon a time, there was a curious little girl named Addie who loved to explore the woods around her house. One day, while wandering deep into the forest, she stumbled upon an ancient ruin. As she cautiously approached the deteriorating structure, she noticed there was a faint light flickering inside. </h1>
                 <!-- fills remaining space with a decorative color -->
                 <div class="decorationFiller"></div>
             </div>
