hello test test

--- a/website/home/home.html
+++ b/website/home/home.html
@@ -108,18 +108,19 @@ body {
                                                 <br>
                                                 Education: VWO, N/T
                                             </p>
-                                            <div class="decorationFiller" id="deco1"></div>
+                                            <div class="decorationFiller"></div>
                                         </div>
                                         
                                         <div class="textBoxHalf">
                                         <!-- add text here -->
                                             <p>
-                                            Hello i'm Youri the maker of this website. I'm a creative and curious person and like making things. My curiousity helps to motivate me. I used that motivation to learn new things like programming, pixel art and vehicle dynamics.
+                                            Hello i'm Youri the maker of this website. I'm a creative and curious person and like making things. My curiousity helps to motivate me. I used that motivation to learn new things like programming and pixel art.
                                             </p>
                                             <h1>Hobbys</h1>
                                             <p>
-                                            My hobby is also to create stuff. I'm addicted to making Lego technic cars and have spend way to much money on Lego. I also like programming, pixel art and building games like Minecraft and Trailmakers.
+                                            My hobby is also to create stuff. I'm addicted to making Lego technic cars and have spend way to much money on Lego. I also like programming, pixel art and playing building games like Minecraft and Trailmakers.
                                             </p>
+                                            <div class="decorationFiller"></div>
                                         </div>
                                     </div>
                                     
@@ -163,5 +164,6 @@ body {
                                     </h1>
                                     </div>
                 </div>
+                <script type="text/javascript" src="../baseStyle/scripts/decorationFiller.js"></script>
         </ul>  
     </nav>
