--- a/website/baseStyle/base.html
+++ b/website/baseStyle/base.html
@@ -66,6 +66,9 @@ body {
                                 </p>
                             </div>
                         </div>
+                        <div class="waterContent">
+
+                        </div>
                         
                         <div class="textSideImage">
                         </div>
@@ -79,5 +82,6 @@ body {
                                     </div>
                 </div>
             </div>
+            <script type="text/javascript" src="../baseStyle/scripts/decorationFiller.js"></script>
         </ul>  
     </nav>
