--- a/website/games/gameServers/gameServersMenu.html
+++ b/website/games/gameServers/gameServersMenu.html
@@ -3,7 +3,7 @@
 <head>
 <title>kasia games</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href ="../baseStyle/base.css" rel="stylesheet">
+<link href ="../../baseStyle/base.css" rel="stylesheet">
 </head>
 <style>
     body, html {
@@ -45,6 +45,13 @@ body {
                         <div class="other">
                         </div>
                         </a>
+
+                        <div class="backNextBox">
+                            <a href="../games.html" aria-label="back. Goes a page back.">
+                            <div class="backButton">
+                            </div>
+                            </a>
+                        </div>
                     </div>  
                 </div>
                 
@@ -63,16 +70,18 @@ body {
                                         <!-- add text here -->
 
                                         <h1>
-                                            What wil you see here.
+                                            Game servers i made:
                                         </h1>
-                                        <p>
-                                            Games i made most of them are javascript games.
-                                        </p>
                                     </div>
+                                <a href="mcServer/serverStatus.html">
+                                    <div class="linkTextBox">
+                                        <h1>Minecraft server</h1>
+                                    </div>
+                                </a>
                                 </div>
                                 <div class="contentBackgroundBottomImage">
                             </div>
-                            </div>
+                        </div>
                         <div class="waterContent">
 
                         </div>
