--- a/website/games/games.html
+++ b/website/games/games.html
@@ -67,10 +67,15 @@ body {
                                             Games i made most of them are javascript games.
                                         </p>
                                     </div>
+                                <a href="gameServers/gameServersMenu.html">
+                                    <div class="linkTextBox">
+                                        <h1>Game servers</h1>
+                                    </div>
+                                </a>
                                 </div>
                                 <div class="contentBackgroundBottomImage">
                             </div>
-                            </div>
+                        </div>
                         <div class="waterContent">
 
                         </div>
